--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://y7kim.github.iohttps://sarafinanyawira.github.io
+url: https://sarafinanyawira.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
